--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,3 @@
-# This workflow will build a Java project with Gradle
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -11,7 +8,6 @@ on:
 
 jobs:
   build-java:
-
     runs-on: ubuntu-latest
     
     steps:
@@ -28,11 +24,19 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
+    - name: Verify JAR file
+      run: ls -l build/libs
+
+    - name: Print working directory
+      run: pwd
+
+    - name: List files
+      run: ls -l
+
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
-        image:  parteekbhatia954/test
+        image: parteekbhatia954/test
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
-         
