--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,6 @@
+# This workflow will build a Java project with Gradle
+# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
+
 name: Java CI with Gradle
 
 on:
@@ -8,6 +11,7 @@ on:
 
 jobs:
   build-java:
+
     runs-on: ubuntu-latest
     
     steps:
@@ -24,15 +28,6 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
-    - name: Verify JAR file
-      run: ls -l build/libs
-
-    - name: Print working directory
-      run: pwd
-
-    - name: List files
-      run: ls -l
-
     - name: Build and Push Docker Image
       uses: mr-smithers-excellent/docker-build-push@v4
       with:
@@ -40,3 +35,4 @@ jobs:
         registry: docker.io
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
+         
