--- a/.github/workflows/java_build_and_docker.yml
+++ b/.github/workflows/java_build_and_docker.yml
@@ -36,4 +36,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: yolkboat/java-project:tagname:latest
+          tags: yolkboat/java-project:latest
